[metadata]
name = AlteMatrix
version = 1.0.0
author = Ayomide Ayodele-Soyebo
author_email = midesuperbest@gmail.com
description = This tool lets you perform some quick tasks for CTFs and Pentesting.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ir0n-c0d3X/AlteMatrix
classifiers =

    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    Intended Audience :: Information Technology

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

    Topic :: Security
    Topic :: Security :: Cryptography

[options]
package_dir =
    = altematrix
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = altematrix
